# fgclip-vad

./: claude.md  msad_anomaly_1.json  msad_anomaly_2.json  msad_bbox.json  msad_captions_normal_only_all.json  msad_captions_normal_only_all_280.json  translation_cache.json  try.py  ucf_anomaly_caption_2.json  ucf_anomaly_caption_3.json  ucf_anomaly_caption_3.xlsx  ucf_fgclip_train_with_timestamps_en.json  ucf_fgclip_train_with_timestamps_en_merged.json  ucf_fgclip_train_with_timestamps_en_translated.json  ucf_fgclip_with_caption2.json  ucf_fgclip_with_caption2_translated.json  ucf_fgclip_with_v3.json  ucf_fgclip_with_v3_msad.json  ucf_normal_videos_1_240_finally.json  ucf_normal_videos_241_475_finally.json  video_captions_merged_v3.json  video_captions_merged_v3_en.json
FG-CLIP/: COMPLETE_TRAINING_GUIDE.md  DIAG_ANALYSIS_REPORT.md  FG_CLIP_PAPER_PROMPT_PART1.md  FG_CLIP_PAPER_PROMPT_PART2.md  FIXES_COMPLETED.md  FIX_SUMMARY.md  FULL_TRAINING_GUIDE.md  LOCAL_CLIP_CONFIG.sh  LOCAL_TRAINING_READY.md  MEMORY_FIX_SUMMARY.md  MODULE_IMPORT_FIX.md  NEXT_STEPS.md  PRE_TRAINING_AUDIT.md  QUICK_START.sh  QUICK_START_EXPERIMENT.md  README.md  README_FIXES.md  READY_TO_TRAIN.sh  REGION_LOSS_FIX_REPORT.md  REGION_TEXT_EXPERIMENT.md  TENSORBOARD_GUIDE.md  TRAINING_FIXES.py  analyze_train_fgclip.py  check_data_quality.py  diagnose_mb_training.py  diagnose_region_loss.py  diagnose_training.py  explain_data_flow.py  loss_flow_diagram.py  memory_bank_timing_analysis.md  merge_ucf_data.py  monitor_resources.sh  monitor_training.sh  projection_analysis.md  pyproject.toml  test_memory_bank.py  (+7 more)
(+288 files in other folders)
